# rust-bitcoind-client

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: client.rs
src/: client.rs  error.rs  lib.rs  rpc.rs  simple_http.rs  types.rs
src/simple_http/: v28.rs
tests/: common.rs  test_simple_http.rs
