[package]
name = "bitcoind-client"
version = "1.0.0"
authors = ["ValuedMammal <valuedmammal@protonmail.com>"]
description = "Bitcoin Core RPC client library"
keywords = ["bitcoin"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bitcoind-client"
repository = "https://github.com/valuedmammal/rust-bitcoind-client"
rust-version = "1.85.0"
edition = "2024"

[dependencies]
corepc-types = { version = "0.11.0", default-features = false }
jsonrpc = { version = "0.19.0", default-features = false }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
corepc-node = { version = "0.10.1", features = ["29_0"] }
# Enable crate default features + HTTP client for tests, examples.
bitcoind-client = { path = ".", default-features = true, features = ["simple-http"] }

[[example]]
name = "client"

[features]
# Enable std library
std = []

# Native HTTP client
simple-http = ["std", "corepc-types/std", "jsonrpc/simple_http"]

# Bitcoin Core compatible versions
default = ["30_0"]
30_0 = []
29_0 = []
28_0 = []
